# telegram_offers

./: bot.py  config.py  database.py  debug_utils.py  railway.json  requirements.txt  rss_scraper.py  utils.py
scrapers/: __init__.py  bot.py  rss_scraper.py
scrapers/scrapers/: rss_scraper.py
scrapers/telegram-offers-bot/: DEPLOY.md  README.md  config.py  database.py  debug_utils.py  pyproject.toml  utils.py
