[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-offers-bot"
version = "1.0.0"
description = "Telegram bot that automatically scrapes and posts deals"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-telegram-bot>=20.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
